# automated-price-tracking

./: .env.example  bun.lockb  next.config.js  package.json  tailwind.config.ts
.github/: .copilot-instructions.md  blog.md  firecrawl.md  motion-ui.md
.github/workflows/: check_prices.yml
backend/: .env.example  db.sqlite  hello.py  pyproject.toml  requirements.txt  ui.py
backend/src/: check_prices.py  database.py  main.py  notifications.py  output.json  scraper.py  ui.py  utils.py
cursor/: cursorrules.md
frontend/: .env.example  bun.lockb  next.config.js  package.json
frontend/prisma/: schema.prisma
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: dashboard-content.tsx  loading.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: navbar.tsx  providers.tsx
frontend/src/components/emails/: price-alert.tsx
frontend/src/components/landing-page/: animated-gradient-stats.tsx  call-to-action.tsx  demo-section.tsx  faq-section.tsx  features-section.tsx  footer.tsx  (+5 more)
frontend/src/lib/: notifications.ts  utils.ts
frontend/src/styles/: globals.css
src/: env.js  middleware.ts
src/app/: layout.tsx
src/app/dashboard/: dashboard-content.tsx
src/app/login/: page.tsx
src/components/: navbar.tsx
src/components/emails/: price-alert.tsx
src/components/landing-page/: animated-gradient-stats.tsx  footer.tsx  hero-with-images.tsx
src/components/ui/: animated-gradient-with-svg.tsx  border-trail.tsx  text-effect.tsx
src/hooks/: use-debounced-dimensions.tsx
src/lib/: utils.ts
(+27 files in other folders)
