[project]
name = "automated-price-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=1.9.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "sqlalchemy==2.0.35",
    "streamlit>=1.41.1",
]
