[project]
name = "automated-price-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.16.0",
    "firecrawl-py>=1.9.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "streamlit>=1.41.1",
]
